# conclave

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  livekit.yaml
.github/workflows/: desktop-release.yml  docker.yml
backend/: Dockerfile  go.mod  go.sum
backend/migrations/: 001_initial.down.sql  001_initial.up.sql  002_settings.up.sql  003_push_subscriptions.up.sql  004_server_invite_settings.down.sql  004_server_invite_settings.up.sql  005_friendships.up.sql  006_message_replies.down.sql  006_message_replies.up.sql  007_space_discovery_requests.down.sql  007_space_discovery_requests.up.sql  008_bans.down.sql  008_bans.up.sql  009_voice_channels.down.sql  009_voice_channels.up.sql  010_threads.down.sql  010_threads.up.sql  011_server_rules.down.sql  011_server_rules.up.sql  012_space_roles.down.sql  012_space_roles.up.sql  013_message_reactions.up.sql  014_thread_replies.down.sql  014_thread_replies.up.sql  015_dm_unread.down.sql  015_dm_unread.up.sql  016_thread_lock.down.sql  016_thread_lock.up.sql  017_welcome_message.down.sql  017_welcome_message.up.sql  018_dm_edit_reactions.down.sql  018_dm_edit_reactions.up.sql  019_local_auth.down.sql  019_local_auth.up.sql  (+6 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  games.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  config.rs  detector.rs  lib.rs  main.rs
frontend/: package-lock.json  package.json  vite.config.ts
(+63 files in other folders)
