[package]
name = "conclave-presence"
version = "0.1.0"
edition = "2021"

[lib]
name = "conclave_presence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conclave-presence"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
directories = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
