[package]
name = "conclave-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "conclave_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conclave-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
directories = "5"
toml = "0.8"
url = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }
